bean error try solution